--- a/src/index.css
+++ b/src/index.css
@@ -143,8 +143,7 @@ select {
   font-family: inherit;
   color: inherit;
   font-size: 1.5rem;
-  padding: 0.7rem;
-  text-align: center;
+  padding: 0.7rem 1.2rem;
   border: 1px solid var(--color-light);
   border-radius: 4px;
   transition: 0.3s;
