--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,7 @@ select {
   font-size: 1.5rem;
   padding: 0.7rem 1.2rem;
   border: 1px solid var(--color-light);
+  text-align: center;
   border-radius: 4px;
   transition: 0.3s;
 }
