--- a/src/index.css
+++ b/src/index.css
@@ -26,14 +26,6 @@ body {
   justify-content: center;
 }
 
-.app {
-  min-height: 66vh;
-  display: grid;
-  grid-template-columns: 34rem 44rem;
-  column-gap: 4rem;
-  align-items: start;
-}
-
 .button {
   background-color: var(--color-medium);
   color: #343a40;
@@ -167,4 +159,24 @@ form h2 {
   text-transform: uppercase;
   letter-spacing: -0.5px;
   margin-bottom: 1.6rem;
+}
+
+/* Media Screem */
+@media screen and (max-width: 863px) {
+  .app {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 0px 12px;
+  }
+}
+
+@media screen and (min-width: 864px) {
+  .app {
+    min-height: 66vh;
+    display: grid;
+    grid-template-columns: 34rem 44rem;
+    column-gap: 4rem;
+    align-items: start;
+  }
 }
